# mcp-crawl4ai-rag-ChromaDB-V1

./: .env  .env-doc.md  .env.example  .gitignore  ARCHON_TASKS.md  Dockerfile  Dockerfile.bak  KNOWLEDGE_API_REFACTORING_SUMMARY.md  MCP_HEALTH_STATUS.md  README.md  UIandServerWebSockets.md  WebSocketRefactorPlan.md  docker-compose.docs.yml  docker-compose.optimized.yml  docker-compose.yml  docusaurus.config.js  pyproject.toml  pytest.ini  sidebars.js  sources_enhancement_migration.sql  startup.py  test_document.md
archon-ui-main/: .gitignore  CLEAN-UP.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: Dockerfile  docusaurus.config.js  package-lock.json  package.json  sidebars.js
migration/: 005_mcp_client_management.sql  1_initial_setup.sql  2_archon_projects.sql  2_archon_tasks.sql  2_remove_update_frequency.sql  3_llm_provider_settings.sql  3_mcp_client_management.sql  4_code_extraction_settings.sql  RESET_DB.sql  archon_tasks.sql  complete_setup.sql  credentials_setup.sql  initial_setup.sql
python/: .dockerignore  CLEAN-UP.md  Docker_Optimization_Guide.md  Docker_Optimization_Implementation.md  Dockerfile  Dockerfile.agents  Dockerfile.alpine  Dockerfile.api  Dockerfile.mcp  Dockerfile.optimized  Dockerfile.server  fix_test_imports.py  pyproject.toml  pytest.ini  requirements.agents.txt  requirements.mcp.txt  requirements.server.txt  requirements.txt  startup.py  validate_imports.py
src/: api_wrapper.py  archon_tasks_mcp.py  config.py  crawl4ai_mcp.py  credential_service.py  mcp_server.py  utils.py  (+1 more)
(+404 files in other folders)
